--- a/style.css
+++ b/style.css
@@ -12,10 +12,12 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  background: linear-gradient(#74b9ff, #a29bfe);
 }
 .main-area .main {
   width: 70em;
   height: 50em;
+  background-color: #81ecec;
   border-radius: 1em;
   display: grid;
   grid-template-columns: 0.5fr 2fr 0.5fr;
@@ -28,7 +30,6 @@
   justify-content: center;
   gap: 5em;
   grid-area: i;
-  background-color: antiquewhite;
 }
 .main-area .main__info .tossing-area {
   position: absolute;
@@ -130,11 +131,11 @@
 }
 .main-area .main__player1 {
   grid-area: a;
-  background-color: aliceblue;
+  position: relative;
 }
 .main-area .main__player2 {
   grid-area: b;
-  background-color: aliceblue;
+  position: relative;
 }
 .main-area .main__spinner {
   grid-area: s;
@@ -154,7 +155,7 @@
 .main-area .main__spinner .box {
   width: 32em;
   height: 32em;
-  border: 1em solid #38ada9;
+  border: 1em solid #ffeaa7;
   border-radius: 50%;
   position: relative;
 }
@@ -263,6 +264,22 @@
 .main-area .main__spinner .modal p {
   width: 90%;
   text-align: center;
+}
+
+.p1,
+.p2 {
+  width: 100%;
+  position: absolute;
+  height: 3em;
+  background-color: #20bf6b;
+  bottom: calc(0% + 5em);
+  text-align: center;
+  color: whitesmoke;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 1.5em;
 }
 
 input::-webkit-outer-spin-button,
